# rez-python

./: .travis.yml  CMakeLists.txt  README.md  package.py
.circleci/: config.yml
cmake/: FindPython.cmake  python.cmake
